--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,7 +349,7 @@ main {
 
 .grid-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(172px, 1fr));
+  grid-template-columns: 1fr 1fr;
   gap: 12px 8px;
 }
 
@@ -1216,12 +1216,499 @@ main {
   #DETAIL PAGE
 \*-----------------------------------*/
 
+.detail-page-main {
+  padding-inline: 16px;
+}
+
+.detail-banner {
+  border-radius: var(--radius-8);
+}
+
+.detail-content {
+  margin-block: 32px;
+}
+
+.detail-page .title-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.detail-content .btn-secondary {
+  flex-shrink: 0;
+}
+
+.detail-page .saved .unsaved-text,
+.detail-page .removed .save-text {
+  display: block;
+}
+
+.detail-page .saved .save-text,
+.detail-page .removed .unsaved-text {
+  display: none;
+}
+
+.detail-author {
+  color: var(--on-background-variant);
+  margin-block: 16px;
+}
+
+.detail-author .span {
+  display: inline;
+  opacity: 0.8;
+}
+
+.detail-stats {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.detail-stats .stats-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+  padding-block: 16px;
+}
+
+.detail-stats .stats-item:not(:last-child) {
+  border-inline-end: 1px solid var(--outline);
+}
+
+.detail-stats .stats-item .label-medium {
+  text-transform: capitalize;
+  opacity: 0.8;
+}
+
+.detail-page .tag-list {
+  justify-content: flex-start;
+  margin-block: 16px 32px;
+}
+
+.ingr-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ingr-title .label-medium {
+  opacity: 0.8;
+}
+
+.ingr-list {
+  margin-block-start: 16px;
+  border-block-start: 1px solid var(--outline);
+  padding-block-start: 8px;
+}
+
+.ingr-item {
+  color: var(--on-background-variant);
+  margin-block: 8px;
+  list-style-type: disc;
+  margin-inline-start: 24px;
+}
+
+.detail-banner-skeleton {
+  aspect-ratio: 1/1;
+}
+
+.detail-content-skeleton .title-skeleton {
+  height: 32px;
+  width: 50%;
+}
+
+.detail-content-skeleton .text-skeleton {
+  height: 14px;
+  width: 80%;
+}
+
+.detail-content-skeleton .filter-chip-skeleton {
+  width: 80px;
+}
+
 /* Skeleton */
 
 /*-----------------------------------*\
   #SAVED RECIPE PAGE
 \*-----------------------------------*/
 
+.saved-recipe-page {
+  padding-block-end: 24px;
+}
+
+.saved-recipe-page .section-title {
+  line-height: 40px;
+}
+
 /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
+
+/* 
+ * responsive for larger than 600px screen
+*/
+
+@media (min-width: 600px) {
+  /* 
+  * CUSTOM TYPOGRAPHY
+  */
+  :root {
+    /* font size */
+    --fs-display-large: 3.6rem;
+    --fs-display-medium: 3.6rem;
+    --fs-display-small: 3rem;
+  }
+
+  /* 
+  * REUSED STYLE
+  */
+
+  .container {
+    padding-inline: 32px;
+  }
+
+  .grid-list {
+    grid-template-columns: repeat(auto-fill, minmax(172px, 1fr));
+  }
+
+  .section-title {
+    margin-block-end: 24px;
+  }
+
+  .snackbar-container {
+    right: auto;
+    left: 32px;
+    max-width: 360px;
+    width: 100%;
+  }
+
+  /* 
+  * TYPOGRAPHY
+  */
+
+  .display-large,
+  .display-medium {
+    line-height: 44px;
+  }
+
+  .display-small {
+    line-height: 36px;
+  }
+
+  .title-small {
+    font-size: 1.6rem;
+    font-weight: var(--weight-medium);
+    line-height: 24px;
+    letter-spacing: 0.15px;
+  }
+
+  /* HERO */
+  .banner-card {
+    background-image: url("../images/hero-banner-medium.jpg");
+  }
+
+  .search-field {
+    height: 72px;
+  }
+
+  .search-wrapper .search-submit {
+    width: 100px;
+  }
+
+  .hero .search-wrapper {
+    margin-block: 24px 16px;
+  }
+
+  /* TAB */
+
+  .tab .tab-list {
+    margin-inline: 0;
+    padding-inline: 0;
+  }
+
+  .tab .btn-secondary {
+    max-width: max-content;
+    margin-inline: auto;
+  }
+
+  /* RECIPE SLIDER */
+
+  .slider-item {
+    min-width: 206px;
+  }
+
+  /* TAG */
+
+  .tag .section-title {
+    margin-block-end: 12px;
+  }
+
+  /* FOOTER */
+
+  .footer {
+    justify-content: space-between;
+    padding-inline: 32px;
+  }
+
+  /* FILTER BAR */
+
+  .filter-bar {
+    border-radius: var(--radius-8) 0 0 var(--radius-8);
+  }
+
+  /* DETAIL PAGE */
+
+  .detail-banner {
+    max-width: 420px;
+  }
+
+  .detail-stats .stats-item {
+    padding-block: 20px;
+  }
+}
+
+/* 
+ * responsive for larger than 768px screen
+*/
+
+@media (min-width: 768px) {
+  /* REUSED STYLE */
+
+  :root {
+    /* OTHERS */
+
+    --header-height: 72px;
+    --mobile-nav-height: 0px;
+  }
+
+  /* RESET */
+
+  body {
+    padding-block-end: 0;
+  }
+
+  /* REUSED STYLE */
+
+  .snackbar-container {
+    bottom: 32px;
+  }
+
+  /* HEADER */
+
+  .header {
+    padding-inline: 32px;
+  }
+
+  .navbar,
+  .header .btn-primary,
+  .navbar-list {
+    display: flex;
+  }
+
+  .navbar {
+    margin-inline-start: auto;
+  }
+
+  .navbar-link {
+    position: relative;
+    height: var(--header-height);
+    display: grid;
+    grid-template-rows: 1fr min-content;
+    align-items: center;
+    padding-inline: 24px;
+    opacity: 0.9;
+  }
+
+  .navbar-link.active::befor {
+    content: "";
+    order: 1;
+    height: 3px;
+    background-color: var(--primary);
+    border-radius: var(--radius-pill) var(--radius-pill) 0 0;
+  }
+
+  /* MOBILE NAV */
+
+  .mobile-nav {
+    display: none;
+  }
+
+  /* FOOTER */
+  .footer .logo {
+    display: block;
+  }
+}
+
+/* 
+ * responsive for larger than 992px screen
+*/
+
+@media (min-width: 992px) {
+  /* CUSTOM TYPOGRAPHY */
+
+  :root {
+    /* TYPOGRAPHY */
+
+    /* font size */
+    --fs-display-large: 5.7rem;
+    --fs-display-medium: 4.5rem;
+    --fs-display-small: 3.6rem;
+
+    /* OTHERS */
+
+    --header-height: 80px;
+  }
+
+  /* Typography */
+
+  .display-large {
+    line-height: 64px;
+  }
+
+  .display-medium {
+    line-height: 52px;
+  }
+
+  .display-small {
+    line-height: 44px;
+  }
+
+  /* Header */
+
+  .header {
+    padding-inline: 40px;
+  }
+
+  .navbar-link {
+    padding-inline: 40px;
+  }
+
+  /* Hero */
+
+  .hero .search-wrapper {
+    max-width: 800px;
+  }
+
+  .banner-card {
+    background-image: url("../images/hero-banner-large.jpg");
+  }
+
+  .banner-card > .label-medium {
+    font-size: 1.4rem;
+    font-weight: var(--weight-regular);
+    opacity: 0.8;
+  }
+
+  /* Tab */
+
+  .tab .tab-list {
+    margin-block-start: 0;
+  }
+
+  .tab-btn {
+    height: 64px;
+  }
+
+  /* Recipe Slider */
+
+  .slider-item {
+    min-width: calc(20% - 6.4px);
+  }
+
+  /* Recipe Page */
+  .filter-bar,
+  .filter-bar.active {
+    all: unset;
+    position: sticky;
+    top: var(--header-height);
+    margin-block-start: -16px;
+    height: calc(100vh - var(--header-height));
+    max-width: 360px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border-inline-end: 1px solid var(--outline);
+    overflow: auto;
+  }
+
+  .filter-bar::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  .filter-bar::-webkit-scrollbar-thumb {
+    background-color: var(--alpha-20);
+  }
+
+  .filter-bar .close-btn {
+    display: none;
+  }
+
+  .filter-content {
+    overflow-y: visible;
+  }
+
+  .filter-content .search-wrapper {
+    padding-block-start: 0;
+  }
+
+  .recipe-page {
+    position: relative;
+    display: flex;
+  }
+
+  .btn-filter,
+  .overlay {
+    display: none;
+  }
+
+  /* Footer */
+  .footer {
+    padding-inline: 40px;
+  }
+
+  /* Detail Page */
+
+  .detail-page-main {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    padding-block-end: 32px;
+    padding-inline: 10%;
+  }
+
+  .detail-page {
+    display: grid;
+    grid-template-columns: 0.8fr 1fr;
+    align-items: flex-start;
+    gap: 36px;
+  }
+
+  .detail-banner {
+    position: sticky;
+    top: calc(var(--header-height) + 32px);
+    margin-block-start: 16px;
+    max-width: 100%;
+  }
+
+  .detail-stats .stats-item {
+    padding-block: 24px;
+    gap: 8px;
+  }
+}
+
+/* 
+ * responsive for larger than 1400px screen
+*/
+
+@media (min-width: 1400px) {
+  /* Reused Style */
+
+  .container {
+    max-width: 1200px;
+  }
+
+  .slider-item {
+    min-width: calc(16.66% - 6.66px);
+  }
+}
